fixed wrong font rendering, safari browser

--- a/js/apps/system/aardvark/frontend/scss/generated.css
+++ b/js/apps/system/aardvark/frontend/scss/generated.css
@@ -1512,10 +1512,12 @@ ul.link-dropdown-menu, ul.user-dropdown-menu, ul.gv-dropdown-menu {
     right: 8px;
     top: -6px; }
 
-.navbar .nav li.dropdown .active > .dropdown-toggle,
-.navbar .nav li.dropdown .open > .dropdown-toggle,
-.navbar .nav li.dropdown .open.active > .dropdown-toggle {
-  background: #788f3d; }
+.navbar {
+  -webkit-font-smoothing: subpixel-antialiased; }
+  .navbar .nav li.dropdown .active > .dropdown-toggle,
+  .navbar .nav li.dropdown .open > .dropdown-toggle,
+  .navbar .nav li.dropdown .open.active > .dropdown-toggle {
+    background: #788f3d; }
 
 nav.navbar {
   height: 38px;
